# sitos

./: .editorconfig  .gitattributes  .gitignore  .sonarcloud.properties  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
.github/: pull_request_template.md  wheel-tools-requirements.txt
.github/workflows/: ci.yml  dependency-upgrade.yml  wheels.yml
.pi/: issue23-red.txt
cmake/: Findzenohc.cmake  sitosConfig.cmake.in  zenohc.cmake
docs/: 00_overview.md  01_requirements.md  02_architecture.md  03_wire_protocol.md  04_api_cpp.md  05_api_python.md  06_build_test_packaging.md  07_issue_breakdown.md  08_contract_registry.md  09_dependency_policy.md  10_adr_process.md  development_workflow.md
docs/adr/: 0001-use-zenoh-as-the-transport-layer.md  0002-implement-an-embedded-storage-node.md  0003-ship-in-memory-and-rocksdb-engines.md  0004-expose-engine-native-snapshots.md  0005-name-the-project-sitos.md  0006-cpp20-core-with-python-bindings.md  0007-adopt-legacy-compatible-payload-v1.md  0008-license-under-apache-2.0.md  0009-english-as-the-repository-language.md  0010-use-nanobind-for-python-bindings.md  0011-develop-in-public-from-day-one.md  0012-google-cpp-style-with-100-column-limit.md  0013-default-to-zenoh-scouting-with-explicit-endpoint-override.md  0014-session-scoped-buffers.md  0015-optional-http-gateway-component.md  0016-use-canonical-zenoh-bytes-encodings.md  0017-atomic-storage-node-lifecycle.md  0018-use-zenoh-valid-batch-key-segment.md  0019-client-result-status-configuration.md  0020-synchronously-complete-transport-get.md  0021-resolve-installed-zenoh-dependency.md  0022-make-param-cache-session-only.md  0023-param-cache-consistency-and-benchmark-boundary.md  0023-param-cache-consistency-and-lifetime.md  0024-opt-in-google-benchmark-build-boundary.md  0025-session-view-lifetime-and-composite-read-consistency.md  0026-python-wheel-build-and-native-runtime.md  0027-keep-http-control-planes-in-host-applications.md  0028-unify-acknowledged-operation-results.md  README.md
include/sitos/: batch.hpp  client_config.hpp  in_memory_engine.hpp  key.hpp  list_sink.hpp  logging.hpp  param_cache.hpp  param_concepts.hpp  param_store.hpp  param_value.hpp  result.hpp  session.hpp  session_view.hpp  sitos.hpp  status.hpp  storage_engine.hpp  storage_node.hpp  transport.hpp
python/: pyproject.toml
python/bindings/: client_binding.cpp  client_binding.hpp  gil_boundary.cpp  gil_boundary.hpp  module.cpp  numpy_api.hpp  numpy_binding.cpp  numpy_binding.hpp  param_cache.cpp  param_store.cpp  param_value_conversion.cpp  param_value_conversion.hpp  status_translation.hpp  storage_node.cpp
python/licenses/: NOTICE-zenoh-c.md
python/sitos/: __init__.py  __init__.pyi  _sitos.pyi  cache.py  cache.pyi  node.py  node.pyi  store.py  store.pyi
scripts/: build_manylinux_zenohc.sh  check_wheel.py  stage_zenohc.py  validate_mypy_consumers.py
src/: batch.cpp  client_config.cpp  in_memory_engine.cpp  key.cpp  list_prefix_validation.hpp  logging.cpp  param_cache.cpp  param_cache_test_access.hpp  param_store.cpp  param_value.cpp  session_view.cpp  status.cpp  storage_engine.cpp  storage_node.cpp  transport_stub.cpp
src/transport/: config_failure.hpp  declaration_handle_lifecycle.cpp  declaration_handle_lifecycle.hpp  declaration_handle_lifecycle_impl.hpp  declaration_handle_test_access.hpp  get_completion.cpp  get_completion.hpp  zenoh_runtime_anchor.hpp  zenoh_transport.cpp  zenoh_transport_test_access.hpp
tests/: CMakeLists.txt
tests/bench/: CMakeLists.txt  cache_get_bench.cpp
tests/consumer/: client_config_header_compile.cpp  list_sink_header_compile.cpp  param_cache_header_compile.cpp  param_concepts_header_compile.cpp  param_store_header_compile.cpp  public_headers_compile.cpp  result_header_compile.cpp  session_view_header_compile.cpp  status_header_compile.cpp
tests/fixtures/: validate_fixtures.py
tests/fixtures/payload_v1/: batch_base_two_entries.hex  bytes_0102ff.hex  dp_240.hex  dp_nan.hex  dp_zero.hex  s64_i32max.hex  s64_minus1.hex  s64_zero.hex  str_ascii.hex  str_utf8.hex
tests/integration/: batch_test.cpp  param_cache_attach_test.cpp  param_store_test.cpp  session_view_test.cpp  storage_node_lifecycle_test.cpp  storage_node_query_test.cpp  storage_node_session_test.cpp  storage_node_subscriber_test.cpp  transport_test.cpp  zenoh_smoke_test.cpp
tests/package/: check_clean_install.cmake  check_relocatable.cmake  run_installed_consumer.cmake  validate_installed_package.cmake
tests/package/consumer/: CMakeLists.txt  main.cpp
tests/python/: param_cache_fixture.cpp  param_store_fixture.cpp  test_import.py  test_numpy_zero_copy.py  test_param_cache.py  test_param_cache_live.py  test_param_store.py  test_param_value.py  test_storage_node.py  test_storage_node_gil.py  test_storage_node_live.py  typing_consumer_invalid.py  typing_consumer_node_valid.py  typing_consumer_valid.py
tests/unit/: bootstrap_test.cpp  client_config_test.cpp  client_transport_factory_test.cpp  in_memory_engine_test.cpp  key_test.cpp  logging_test.cpp  param_cache_attach_test.cpp  param_cache_read_test.cpp  param_store_test.cpp  param_value_test.cpp  python_status_translation_test.cpp  result_test.cpp  session_view_test.cpp  storage_engine_contract.hpp  storage_engine_contract_test.cpp  storage_node_test.cpp  transport_get_completion_test.cpp
