[build-system]
requires = [
  "scikit-build-core==0.10.7",
  "nanobind==2.9.2",
]
build-backend = "scikit_build_core.build"

[project]
name = "sitos"
dynamic = ["version"]
description = "A distributed parameter store for compute pipelines"
readme = "../README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/tetsuh/sitos"
Repository = "https://github.com/tetsuh/sitos"
Documentation = "https://github.com/tetsuh/sitos/tree/main/docs"

[tool.scikit-build]
cmake.source-dir = ".."
build-dir = "../build/python-wheel/{wheel_tag}"
install.components = ["python"]

[tool.scikit-build.wheel]
license-files = ["../LICENSE"]

[tool.scikit-build.cmake.define]
SITOS_BUILD_PYTHON = "ON"
SITOS_BUILD_TESTS = "OFF"
SITOS_BUILD_BENCHMARKS = "OFF"
SITOS_WITH_ROCKSDB = "OFF"
SITOS_WITH_ZENOH = "ON"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "../CMakeLists.txt"
regex = "project\\(sitos VERSION (?P<value>[0-9]+\\.[0-9]+\\.[0-9]+)"

[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
